// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return theme data for slug 8-depart-de-lentreprise (trim \`8-\`) 1`] = `
Object {
  "breadcrumbs": Array [],
  "children": Array [
    Object {
      "label": "Documents à remettre au salarié",
      "slug": "/themes/documents-a-remettre-au-salarie",
    },
    Object {
      "label": "Démission",
      "slug": "/themes/demission",
    },
    Object {
      "label": "Fin d'un CDD - CTT",
      "slug": "/themes/fin-dun-cdd-ctt",
    },
    Object {
      "label": "Rupture conventionnelle",
      "slug": "/themes/rupture-conventionnelle",
    },
    Object {
      "label": "Licenciement : droits des salariés et procédures",
      "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
    },
    Object {
      "label": "Retraite",
      "slug": "/themes/retraite",
    },
    Object {
      "label": "Autres départs",
      "slug": "/themes/autres-departs",
    },
  ],
  "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
  "position": 8,
  "refs": Array [],
  "slug": "depart-de-lentreprise",
  "title": "Départ de l'entreprise",
}
`;

exports[`return theme data for slug depart-de-lentreprise 1`] = `
Object {
  "breadcrumbs": Array [],
  "children": Array [
    Object {
      "label": "Documents à remettre au salarié",
      "slug": "/themes/documents-a-remettre-au-salarie",
    },
    Object {
      "label": "Démission",
      "slug": "/themes/demission",
    },
    Object {
      "label": "Fin d'un CDD - CTT",
      "slug": "/themes/fin-dun-cdd-ctt",
    },
    Object {
      "label": "Rupture conventionnelle",
      "slug": "/themes/rupture-conventionnelle",
    },
    Object {
      "label": "Licenciement : droits des salariés et procédures",
      "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
    },
    Object {
      "label": "Retraite",
      "slug": "/themes/retraite",
    },
    Object {
      "label": "Autres départs",
      "slug": "/themes/autres-departs",
    },
  ],
  "description": "C’est la fin de votre contrat de travail, vous souhaitez rompre le contrat de travail d’un salarié et vous vous demandez quels sont les documents obligatoire à remettre ? Vous voulez démissionner, faire une rupture conventionnelle ou connaître les indemnités auxquelles vous avez droit ? Retrouvez toutes nos réponses ici. ",
  "position": 8,
  "refs": Array [],
  "slug": "depart-de-lentreprise",
  "title": "Départ de l'entreprise",
}
`;

exports[`return themes root themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "label": "Embauche",
          "slug": "/themes/embauche",
        },
        Object {
          "label": "Contrat de travail",
          "slug": "/themes/contrat-de-travail",
        },
      ],
      "icon": "Contract",
      "position": 1,
      "slug": "embauche-et-contrat-de-travail",
      "title": "Embauche et contrat de travail",
    },
    Object {
      "children": Array [
        Object {
          "label": "Documents à remettre au salarié",
          "slug": "/themes/documents-a-remettre-au-salarie",
        },
        Object {
          "label": "Démission",
          "slug": "/themes/demission",
        },
        Object {
          "label": "Fin d'un CDD - CTT",
          "slug": "/themes/fin-dun-cdd-ctt",
        },
        Object {
          "label": "Rupture conventionnelle",
          "slug": "/themes/rupture-conventionnelle",
        },
        Object {
          "label": "Licenciement : droits des salariés et procédures",
          "slug": "/themes/licenciement-droits-des-salaries-et-procedures",
        },
        Object {
          "label": "Retraite",
          "slug": "/themes/retraite",
        },
        Object {
          "label": "Autres départs",
          "slug": "/themes/autres-departs",
        },
      ],
      "icon": "Depart",
      "position": 8,
      "slug": "depart-de-lentreprise",
      "title": "Départ de l'entreprise",
    },
  ],
}
`;
